--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Payment/AddBankDetails.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Payment/AddBankDetails.cshtml
@@ -67,7 +67,7 @@
                 <div class="row form-group text-center mb-3 mt-3">
                     <div class="mx-auto">
                         <input type="submit" value="Add" class="btn btn-primary" />
-                        <input type="button" value="Cancel" id="Clear" class="btn btn-danger" />
+                        <input type="button" value="Cancel" id="Clear" class="btn btn-danger" onclick="location.href='@Url.Action("UserBankAccounts", "Payment")'" />
                     </div>
 
                 </div>
