--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/Content/css/fontawesome.css" rel="stylesheet" />
     <link rel="icon" href="~/Content/Logos/AppLogo.png" type="image/gif" sizes="16x16">
     <link href="~/Content/css/CreatedCSS/PageLoader.css" rel="stylesheet" />
+    <link href="~/Content/css/CreatedCSS/SideBarNav.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -39,16 +40,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
-                            <li class="nav-item fs-5 me-4 ">
-                                <a class="nav-link active " aria-current="page" href="/Dishes/DishList">Dishes List</a>
-                            </li>
-                            <li class="nav-item fs-5 me-4">
-                                <a class="nav-link " href="/Restaurant/PendingOrders">Pending Orders</a>
-                            </li>
-                            <li class="nav-item fs-5 me-4 ">
-                                <a class="nav-link " href="/Restaurant/OrderHistory">Order history</a>
-                            </li>
-
+                            
+                          
 
                             <li class="nav-item fs-4 my-auto ">
                                 <input type="submit" class="btn btn-danger btn-lg" value="Logout" onclick="location.href='@Url.Action("LogoutRestaurant", "Logout")'" />
@@ -62,8 +55,38 @@
         </div>
     </div>
 
-    <div class="mb-5">
-        @RenderBody()
+    <div class="sidebar shadow">
+        <ul class="no-bullets">
+            <li class="nav-item fs-5 me-4 ">
+                <a class="nav-link active " aria-current="page" href="/Dishes/DishList">Food List</a>
+            </li>
+            <li class="nav-item fs-5 me-4">
+                <a class="nav-link " href="/Payment/UserBankAccounts">Bank Accounts</a>
+            </li>
+
+            <li class="nav-item fs-5 me-4">
+                <a class="nav-link " href="/Restaurant/PendingOrders">Pending Orders</a>
+            </li>
+            <li class="nav-item fs-5 me-4 ">
+                <a class="nav-link " href="/Restaurant/OrderHistory">Order history</a>
+            </li>
+
+        </ul>
+
+    </div>
+
+    <div class="content">
+        
+
+        @if (Session["Restaurant"] != null)
+        {
+            @RenderBody()
+        }
+        else
+        {
+            Response.Redirect("~/Login/LogIn");
+
+        }
     </div>
     <footer class="shadow text-center p-2" style="background-color: #F3F2F1; bottom: 0; position: fixed; width: 100%; ">
         <p>&copy; @DateTime.Now.Year - copyright@adharshanandan</p>
