--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Dishes/FoodItems.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Dishes/FoodItems.cshtml
@@ -183,6 +183,7 @@
                                 
                             } else {
                                 alert(data);
+                                location.reload();
                             }
 
                         },
