Completed. Need to check all functioning

--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Cart/CartItemsDisplay.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Cart/CartItemsDisplay.cshtml
@@ -407,6 +407,9 @@
                 else if (msg == "Card") {
                     location.href = "/Payment/SelectBankToPay";
                 }
+                else if (msg == "Success") {
+                    location.href = "/Customer/ActiveOrders";
+                }
                 else {
                     alert(msg);
                 }
