--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_CustomerLayout.cshtml
@@ -41,7 +41,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto my-auto">
-                            
+                          
+
                             @if (Session["CartItemsCount"].ToString() == "0")
                             {
                                 <li class="nav-item fs-4 me-4  ">
@@ -75,29 +76,38 @@
             </nav>
         </div>
     </div>
-    <div class="sidebar shadow">
+    <div class="sidebar shadow p-0">
+        @{
+            string[] arr = (string[]) Session["CustomerDetailsOnLayout"];
+        }
+
+
         <ul class="no-bullets">
-            <li class="nav-item fs-4 me-4 my-auto">
+            <li class="nav-item fs-4 me-4 mt-2 mx-auto text-center my-auto sideBarLi">
+                <img src="@Url.Content(arr[0].ToString())" style="width:100px;height:100px" class="rounded-circle border border-dark border-3 " />
+                <h4 class="mt-3">@arr[1].ToString()</h4>
+            </li>
+            <li class="nav-item fs-5 me-4 my-auto sideBarLi">
                 <a class="nav-link " href="/Customer/FoodItems">Home</a>
             </li>
-            <li class="nav-item fs-4 me-4 my-auto ">
+            <li class="nav-item fs-5 me-4 my-auto sideBarLi ">
                 <a class="nav-link " href="/Customer/UserProfile">Profile</a>
             </li>
-            <li class="nav-item fs-4 me-4 my-auto">
+            <li class="nav-item fs-5 me-4 my-auto sideBarLi">
                 <a class="nav-link " href="/Payment/UserBankAccounts">Bank Accounts</a>
             </li>
-            <li class="nav-item fs-4 me-4 my-auto">
+            <li class="nav-item fs-5 me-4 my-auto sideBarLi">
                 <a class="nav-link " href="/Customer/FavRestaurants">Favourites</a>
             </li>
-            <li class="nav-item fs-4 me-4 my-auto">
+            <li class="nav-item fs-5 me-4 my-auto sideBarLi">
                 <a class="nav-link " href="/Customer/ActiveOrders">Active Orders</a>
             </li>
-            <li class="nav-item fs-4 me-4 my-auto">
+            <li class="nav-item fs-5 me-4 my-auto sideBarLi">
                 <a class="nav-link " href="/Customer/OrdersHistory">Order History</a>
             </li>
 
         </ul>
-        
+
     </div>
 
     <div class="content">
@@ -122,20 +132,15 @@
     <script src="~/Scripts/CreatedScripts/PageLoader.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
 
-    @*<script>
+
+    <script src="~/Scripts/CreatedScripts/OrderStatus.js"></script>
+    <script>
         $(document).ready(function () {
-            $.ajax({
-                method: "GET",
-                url: "/Customer/FoodItems",
-                success: function (data) {
-                    location.href=""
-                },
-                error: function (err) {
-                    alert(err);
-                }
-            })
-        })
-    </script>*@
+            $(".sideBarLi").append("<hr />");
+        });
+    </script>
+
+
 
 </body>
 </html>
