--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_DeliveryStaffLayoutPage.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_DeliveryStaffLayoutPage.cshtml
@@ -34,7 +34,7 @@
         <div class="col-md-6 col-4 my-auto ms-auto">
             <nav class="navbar navbar-expand-lg bg-light ">
                 <div class="container-fluid">
-                    <span class="navbar-brand" href="#">Hello, </span>
+                    
                     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -56,7 +56,14 @@
         </div>
     </div>
     <div class="sidebar shadow">
+        @{
+            string[] arr = (string[])Session["StaffDetailsOnLayout"];
+        }
         <ul class="no-bullets">
+            <li class="nav-item fs-4 me-4 mt-2 mx-auto text-center my-auto sideBarLi">
+                <img src="@Url.Content(arr[0].ToString())" style="width:100px;height:100px" class="rounded-circle border border-dark border-3 " />
+                <h4 class="mt-3">@arr[1].ToString()</h4>
+            </li>
             <li class="nav-item fs-5 me-4 my-auto">
                 <div class="rounded-circle bg-danger p-2" style="position: absolute; right: 10px; color: #fff; top: 2px; font-size: 12px; ">@TempData["NewRequest"].ToString()</div>
                 <a class="nav-link  " aria-current="page" href="/DeliveryBoy/PendingOrderRequests">New Requests</a>
@@ -64,7 +71,7 @@
             <li class="nav-item fs-5 me-4">
                 <a class="nav-link " href="/DeliveryBoy/AcceptedOrders">Accepted Orders</a>
             </li>
-    
+
 
             <li class="nav-item fs-5 me-4 ">
                 <a class="nav-link " href="/DeliveryBoy/DeliveredOrders">Delivered orders</a>
