--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_RestaurantLayout.cshtml
@@ -34,14 +34,14 @@
         <div class="col-md-6 col-4 my-auto ms-auto">
             <nav class="navbar navbar-expand-lg bg-light ">
                 <div class="container-fluid">
-                    <span class="navbar-brand" href="#">Hello, </span>
+                    
                     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
-                            
-                          
+
+
 
                             <li class="nav-item fs-4 my-auto ">
                                 <input type="submit" class="btn btn-danger btn-lg" value="Logout" onclick="location.href='@Url.Action("LogoutRestaurant", "Logout")'" />
@@ -56,19 +56,30 @@
     </div>
 
     <div class="sidebar shadow">
+        @{
+            string[] arr = (string[])Session["RestDetailsOnLayout"];
+        }
         <ul class="no-bullets">
-            <li class="nav-item fs-5 me-4 ">
-                <a class="nav-link active " aria-current="page" href="/Dishes/DishList">Food List</a>
+            <li class="nav-item fs-4 me-4 mt-2 mx-auto text-center my-auto sideBarLi">
+                <img src="@Url.Content(arr[0].ToString())" style="width:100px;height:100px" class="rounded-circle border border-dark border-3 " />
+                <h4 class="mt-3">@arr[1].ToString()</h4>
             </li>
-            <li class="nav-item fs-5 me-4">
-                <a class="nav-link " href="/Payment/UserBankAccounts">Bank Accounts</a>
+            <li class="nav-item fs-5 me-4 ">
+                <a class="nav-link sideBarLi" aria-current="page" href="/Restaurant/RestProfile">Profile</a>
+            </li>
+            <li class="nav-item fs-5 me-4 ">
+                <a class="nav-link  sideBarLi" aria-current="page" href="/Dishes/DishList">Food List</a>
             </li>
 
             <li class="nav-item fs-5 me-4">
-                <a class="nav-link " href="/Restaurant/PendingOrders">Pending Orders</a>
+                <a class="nav-link sideBarLi " href="/Payment/UserBankAccounts">Bank Accounts</a>
+            </li>
+
+            <li class="nav-item fs-5 me-4">
+                <a class="nav-link sideBarLi " href="/Restaurant/PendingOrders">Pending Orders</a>
             </li>
             <li class="nav-item fs-5 me-4 ">
-                <a class="nav-link " href="/Restaurant/OrderHistory">Order history</a>
+                <a class="nav-link sideBarLi " href="/Restaurant/OrderHistory">Order history</a>
             </li>
 
         </ul>
@@ -76,7 +87,7 @@
     </div>
 
     <div class="content">
-        
+
 
         @if (Session["Restaurant"] != null)
         {
@@ -100,4 +111,10 @@
 
 </body>
 </html>
+
+<script>
+    $(document).ready(function () {
+        $(".sideBarLi").append("<hr />");
+    });
+</script>
 
